Example of json schema validator